--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/brianjiang2200/gt-web#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.7",
